# STM-Femt-Bolt-Viwer

./: .clang-format  .clang-tidy  .env.local.example  .envrc  .gitignore  CMakeLists.txt  README.md  build.ps1  devenv.nix  vcpkg.json
.agents/skills/release-self-hosted-runner/: SKILL.md
.claude/: settings.json
.claude/skills/release-self-hosted-runner/: SKILL.md
.codex/environments/: environment.toml
.github/workflows/: build-and-release.yml  cpp-style.yml  unit-tests.yml  verify-build.yml  verify-sdk-download.yml
cmake/: ResolveOrbbecSDK.cmake  cpp_style.py
docs/: RELEASE_RULE_JA.md
scripts/: dev-build.ps1  dev-build.sh  dev-download-sdks.sh  orbbec-sdk-checksums.txt  package_release.ps1  resolve-orbbec-checksum.sh
src/: app_model.h  app_settings.cpp  app_settings.h  camera_session.cpp  camera_session.h  frame_processing.cpp  frame_processing.h  gl_utils.cpp  gl_utils.h  i18n.cpp  i18n.h  input.cpp  input.h  log_util.cpp  log_util.h  main.cpp  pixel_conversion.cpp  pixel_conversion.h  render.cpp  render.h  settings_codec.cpp  settings_codec.h  types.h  usb_topology.cpp  usb_topology.h  usb_topology_format.cpp  usb_topology_format.h
tests/: unit_tests.cpp
